--- a/open_trails/static/css/app.css
+++ b/open_trails/static/css/app.css
@@ -52,11 +52,15 @@
 }
 
 .semibreve-alert {
-  padding: 1em 0;
+  padding: .5em 0;
 }
 
 .semibreve-alert-header {
   margin-bottom: 0;
+}
+
+.semibreve-reduced {
+  padding: 1em 2%;
 }
 
 .badge-heading-layout-fix {
@@ -100,7 +104,7 @@
   text-align: center;
   line-height: 3em;
   padding-top: 1em;
-  margin-top: 5em;
+  margin: 2em 0 4em 0;
   height: 3em;
 }
 
