added an indication of which file is being converted, and future functionality for other geodata

--- a/open_trails/templates/check-01-upload-opentrails.html
+++ b/open_trails/templates/check-01-upload-opentrails.html
@@ -30,11 +30,7 @@
 </head>
 
 <body>
-	<section class="layout-semibreve layout-centered">
-
-	        <h3 class="h3">Parks and trails are a cornerstone of public health and quality of life. The Public Land and Trail Specification helps citizens get outdoors to enjoy them.</h3>
-
-	</section>
+    {% include "headline-validator.html" %}
 
         <section class="layout-semibreve">
             <h3 class="h3">Upload your open trails data!</h3>
