--- a/open_trails/templates/under-development.html
+++ b/open_trails/templates/under-development.html
@@ -1,6 +1,6 @@
 <div class="alert alert-fix">
 	<div class="layout-semibreve semibreve-alert">
-	        <p class="semibreve-alert-header">This tool is incomplete and under active development. <a href="http://github.com/codeforamerica/plats">Learn More.</a></p>
+	        <p class="semibreve-alert-header">This tool is incomplete and under active development. <a href="http://github.com/codeforamerica/plats">Learn More on Github.</a></p>
 		</div>
 	</div>
 </div>
