--- a/open_trails/templates/check-02-validated-opentrails.html
+++ b/open_trails/templates/check-02-validated-opentrails.html
@@ -46,6 +46,16 @@
                 {% endfor %}
             </ul>
         </section>
+        <section class="layout-semibreve">
+            <div class="layout-minim">
+                <h4>First thing</h4>
+                <p>More about the first thing.</p>
+            </div>
+            <div class="layout-minim">
+                <h4>Second thing</h4>
+                <p>More about the second thing.</p>
+            </div>
+        </section>
 
     {% include "script-olark.html" %}
 </body>
