--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -52,24 +52,22 @@
     <div class="slab-gray">
         <section class="layout-semibreve">
             <div class="badge-heading badge-blue">
-                <h3 class="badge-heading-h3-fix">Next: Convert uploaded data.</h3>
+                <h3 class="badge-heading-h3-fix">Next: Review and convert your data.</h3>
             </div>
             <form action="/datasets/{{ dataset.id }}/transform-segments" method=post>
                 <p>
-                    <button>Convert</button>
+                    <button>Ready? Convert it.</button>
                 </p>
             </form>
         </section>
     </div>
     <section class="layout-semibreve">
-        <div class="layout-minim">
-            <h4>Review your uploaded data.</h4>
-            <p>You've uploaded a shapefile that contains all of the data we need to get started with the conversion. Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, and a sample value.</p>
-        </div>
-        <div class="layout-minim">
-        <h4> Ready? Let's convert your data to OpenTrails.</h4>
-            <p>You've uploaded a shapefile that contains all of the data we need to get started with the conversion. Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, and a sample value.</p>
-        </div>
+        <h4>Review your uploaded data.</h4>
+        <p>You've uploaded a shapefile that contains the data we need to get started with the conversion. Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, along with a sample value. Here are a couple of questions to keep in mind:</p>
+        <ul>
+            <li>Do the segments contain the name of the trail they are a part of?</li>
+            <li>Do the segments have attributes describing appropriate or allowed use?</li>
+        </ul>
     </section>
 
     <div class="primary-content-line"></div>
