initial layout for validator message pages

--- a/open_trails/templates/error-missing-segment-id.html
+++ b/open_trails/templates/error-missing-segment-id.html
@@ -31,7 +31,7 @@
 
 <html>
 	<body>
-		{% include "headline.html" %}
+		{% include "headline-converter.html" %}
 		<section class="layout-semibreve">
 			<table>
 				<thead>
