--- a/open_trails/templates/error-missing-segment-motor-vehicles.html
+++ b/open_trails/templates/error-missing-segment-motor-vehicles.html
@@ -31,7 +31,7 @@
 
 <html>
 	<body>
-		{% include "headline.html" %}
+		{% include "headline-converter.html" %}
 		<section class="layout-semibreve">
 			<h3>A determination as to whether "motorized vehicles" are permitted is not required, but is strongly recommended.</h3>
 			<p>OpenTrails is designed to communicate to visitors not just where trails traverse and how they can be accessed, but also what activities are permissable. While not required to include this value, many consumers of OpenTrails data are interested in knowing whether certain acitivites are apporopriate</p>
