--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -33,7 +33,7 @@
     {% include "headline-home.html" %}
     {% include "under-development.html" %}
 
-    <div class="layout-semibreve">
+    <section class="layout-semibreve">
         <ul class="teasers">
             <li class="layout-minim-staccato">
                 <article class="teaser teaser-app">
@@ -85,6 +85,7 @@
             <p>Moreoever, the Code for America team is available to provide assistance if you run into any problems. Once you begin the conversion process, a feedback form will appear in the bottom-right hand side of your screen.</p>
         </div>
     </div>
+
     <div class="layout-semibreve">
         <div class="layout-minim">
             <h4>About OpenTrails</h4>
@@ -114,5 +115,6 @@
 
         </div>
     </div>
+    {% include "script-olark.html" %}
 </body>
 </html>
