--- a/open_trails/templates/messages-list.html
+++ b/open_trails/templates/messages-list.html
@@ -13,7 +13,7 @@
 
     {% for (level, id, words) in messages %}
         {% if level == 'warning' %}
-            <li class="alert-info"><a href="/errors/{{ id }}">{{ words }}</a></li>
+            <li class="alert"><a href="/errors/{{ id }}">{{ words }}</a></li>
         {% elif level not in ('error', 'success') %}
             <li class="alert"><a href="/errors/{{ id }}">{{ words }}</a></li>
         {% endif %}
