--- a/open_trails/templates/check-01-upload-opentrails.html
+++ b/open_trails/templates/check-01-upload-opentrails.html
@@ -39,8 +39,8 @@
             </div>
             <form action="/checks/{{ dataset.id }}/upload" method=post enctype=multipart/form-data>
                 <p>
-                    <input type=file name=file>
-                    <input type=submit value=Upload>
+                    <input type=file name=file></input>
+                    <input type=submit value=Upload></input>
                 </p>
             </form>
         </section>
