Using complete sentences in buttons

--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -44,7 +44,7 @@
                         <p>Our converter tool transformers shapefiles into the OpenTrails format, which is a suite of GeoJSON and CSV files. The tool offers helpful feedback if there are problems, and suggestions about how to make the most of OpenTrails data.</p>
                         <br>
                         <form id="start" action="/new-dataset" method=post>
-                            <button class="minim-staccato-button">Get Started</button>
+                            <button class="minim-staccato-button">Convert Your Data</button>
                         </form>
                     </div>
                     <footer class="teaser-footer">
@@ -63,7 +63,7 @@
                         <p>Upload your various OpenTrails data, and this tool will evaluate its compliance with the OpenTrails specification. The tool provides helpful feedback about how to improve your data's conformance to the specification, and by extension, its value to third party developers or data consumers.
                         <br>
                         <form id="start" action="/check-dataset" method=post>
-                            <button class="minim-staccato-button">Validate Data</button>
+                            <button class="minim-staccato-button">Validate Your Data</button>
                         </form>
                     </div>
                     <footer class="teaser-footer">
