--- a/open_trails/templates/dataset-04-named-trails.html
+++ b/open_trails/templates/dataset-04-named-trails.html
@@ -62,24 +62,24 @@
                 <form action="/datasets/{{ dataset.id }}/create-steward" method=post>
                     <ul class="list-form">
                         <li class="form-field">
-                            <label for="steward-name">Your Organization's Name</label>
-                            <input id="steward-name" name=name class="input" type="text" />
+                            <label for="name">Your Organization's Name</label>
+                            <input name="name" class="input" type="text" />
                         </li>
                         <li class="form-field">
-                            <label for="steward-url">Your Organization's URL</label>
-                            <input id="steward-url" name=url class="input" type="text" />
+                            <label for="url">Your Organization's URL</label>
+                            <input name="url" class="input" type="text" placeholder="http://" />
                         </li>
                         <li class="form-field">
-                            <label for="steward-phone">Phone Contact for Visitors</label>
-                            <input id="steward-phone" name=phone class="input" type="text" />
+                            <label for="phone">Phone Contact for Visitors</label>
+                            <input name="phone" class="input" type="text" placeholder="(555) 555-1212" />
                         </li>
                         <li class="form-field">
-                            <label for="steward-address">HQ or Visitor Center Address</label>
-                            <input id="steward-address" name=address class="input" type="text" />
+                            <label for="address">HQ or Visitor Center Address</label>
+                            <input name="address" class="input" type="text" placeholder="123 Main St., Anytown USA" />
                         </li>
                         <li class="form-field">
-                            <label for="steward-license">A link to your data license</label>
-                            <input id="steward-license" name=license class="input" type="text" />
+                            <label for="license">A link to your data license</label>
+                            <input name="license" class="input" type="text" placeholder="http://" />
                         </li>
                         <br>
                         <p>
