--- a/open_trails/templates/headline-converter.html
+++ b/open_trails/templates/headline-converter.html
@@ -1,5 +1,5 @@
 <div class="slab-dark-blue">
 	<section class="headline layout-semibreve semibreve-reduced">
-	    <h1 class="h2 tool-title"><a href="/index.html">OpenTrails Converter</a></h1>
+	    <h1 class="h2 tool-title"><a href="/">OpenTrails Converter</a></h1>
 	</section>
 </div>
