--- a/open_trails/templates/dataset-05-stewards.html
+++ b/open_trails/templates/dataset-05-stewards.html
@@ -48,10 +48,82 @@
             <br>OpenTrails.zip</li>
     </ol>
 
-    <section class="layout-semibreve">
-        <div class="badge-heading">
-            <h3 class="badge-heading-h3-fix">Created a stewards.csv file Successfully!</h3>
+    <div class="slab-gray">
+        <section class="layout-semibreve">
+            <div class="badge-heading">
+                <h3 class="badge-heading-h3-fix">Download your data in OpenTrails!</h3>
+            </div>
+            <br>
+            <button><a href="/datasets/{{ dataset.id }}/open-trails.zip"></a>Download open-trails.zip</button>
+            <p>In the .zip file, you'll find the following files:</p>
+            <ul>
+                <li><code>trail_segments.geojson</code>, which contains your trail segment geometries</li>
+                <li><code>named_trails.csv</code>which groups segments into trails, and describes their use.</li>
+                <li><code>stewards.csv</code>which describes your organization for visitors looking for more information.</li>
+            </ul>
+        </section>
+    </div>
+
+    <section>
+        <div class="layout-chimney-invert">
+          <div class="layout-minim">
+            <h4>Come back soon to convert other data to OpenTrails.</h4>
+            <p>This tool is <a href="http://github.com/codeforamerica.org/plats">under active development</a>. In the coming weeks, functionality for converting your trailhead and area (park boundary) shapefiles into OpenTrails will be released.</p>
+
+            <h4>Ready for more? Enroll in the OpenTrails Course today.</h4>
+            <p>During this three week course, Code for America and OpenTrails advisors will walk your staff through each step of publishing and maintaining open data for your trail system.</p>
+
+            <p>We'll help you produce the data, establish clear internal process, and find the right OpenTrails apps or tools for your needs. The course consists of weekly webinars, "coursework" for your OpenTrails team, and ongoing technical assistance.</p>
+          </div>
+          <div class="layout-minim slab-dark-blue chimney">
+            <h3>Enroll now in the OpenTrails Course, beginning August 6th. Space is limited.</h3>
+            <form class="sign-up" action="https://codeforamerica.wufoo.com/forms/z1jk38le1dysfvv/#public" autocomplete="off" enctype="multipart/form-data" method="post" novalidate="">
+              <ul class="list-form">
+                <li id="foli15" class="notranslate form-field">
+                  <label class="desc" id="title15" for="Field15">
+                  Name
+                  </label>
+                  <div>
+                    <input id="Field15" name="Field15" type="text" class="field text medium" value="" maxlength="255" tabindex="1" onkeyup=""/>
+                  </div>
+                </li>
+                <li id="foli17" class="notranslate form-field">
+                  <label class="desc" id="title17" for="Field17">
+                  Your Preferred Title
+                  </label>
+                  <div>
+                    <input id="Field17" name="Field17" type="text" class="field text medium" value="" maxlength="255" tabindex="2" onkeyup=""/>
+                  </div>
+                </li>
+                <li id="foli21" class="notranslate form-field">
+                  <label class="desc" id="title21" for="Field21">
+                  City or Agency
+                  </label>
+                  <div>
+                    <input id="Field21" name="Field21" type="text" class="field text medium" value="" maxlength="255" tabindex="4" onkeyup=""/>
+                  </div>
+                </li>
+                <li id="foli24" class="notranslate form-field">
+                  <label class="desc" id="title24" for="Field24">
+                    State
+                  </label>
+                  <div>
+                    <input id="Field24" name="Field24" type="text" class="field text medium" value="" maxlength="255" tabindex="5" onkeyup=""/>
+                  </div>
+                </li>
+                <li id="foli26" class="notranslate form-field">
+                  <label class="desc" id="title26" for="Field26">
+                    Email
+                  </label>
+                  <div>
+                    <input id="Field26" name="Field26" type="email" spellcheck="false" class="field text medium" value="" maxlength="255" tabindex="6" /> 
+                  </div>
+                </li>
+                  <button class="button">Submit</button>
+                  <input id="idstamp" type="hidden" name="idstamp" value="KHrPZnNTvj9RHvqFq8Hfbyb7+Em3WAjEj5ECsWJAgKQ=">
+              </ul>
+            </form>
+              <small>Code for America staff will respond with details about the course, and whether or not space is available in the August cohort.</small>
+          </div>
         </div>
-        <br>
-        <h4>Download your <a href="/datasets/{{ dataset.id }}/open-trails.zip">open-trails.zip</a> so far.</p>
     </section>
